force-app/main/default/objects/Knowledge_Day_Member__c/Knowledge_Day_Member__c.object-meta.xml
<CustomObject>
    <label>Knowledge Day Member</label>
    <nameField>
        <displayFormat>KDM-{000}{YYMMDD}</displayFormat>
        <label>Knowledge Day Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Day Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>