force-app/main/default/objects/Knowledge_Day_Member__c/fields/Knowledge_Day__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Day__c</fullName>
    <label>Knowledge Day</label>
    <referenceTo>Knowledge_Day__c</referenceTo>
    <relationshipLabel>Knowledge Day Members</relationshipLabel>
    <relationshipName>Knowledge_Day_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>