force-app/main/default/objects/Knowledge_Day_Member__c/fields/Show_and_Tell_Report__c.field-meta.xml
<CustomField>
    <fullName>Show_and_Tell_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show and Tell Report</label>
    <referenceTo>Show_and_Tell_Report__c</referenceTo>
    <relationshipLabel>Knowledge Day Members</relationshipLabel>
    <relationshipName>Knowledge_Day_Members</relationshipName>
    <type>Lookup</type>
</CustomField>