force-app/main/default/objects/Knowledge_Day_Member__c/fields/Show_and_Tell_Template__c.field-meta.xml
<CustomField>
    <fullName>Show_and_Tell_Template__c</fullName>
    <label>Show and Tell Template</label>
    <type>Url</type>
</CustomField>