force-app/main/default/objects/Knowledge_Day_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Knowledge Day Memberships</relationshipLabel>
    <relationshipName>Knowledge_Day_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>