force-app/main/default/objects/Knowledge_Day_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Topic__c</columns>
    <columns>Knowledge_Day__c</columns>
    <columns>Show_and_Tell_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>